# ArtLine

./: .gitignore  pyproject.toml
Model/: Train.ipynb
ex/: ArtLine.ipynb
