[tool.poetry]
name = "artline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9.9.9.9.9.9.9.9.9"
fastai = "1.0.61"
numpy = "1.17.2"
pandas = "1.1.2"
torch = "1.6.0"
torchvision = "=0.7.0"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
